--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc -w",
     "lint": "eslint '*/**/*.{js,ts}' --quiet --fix",
     "deploy": "sls deploy",
-    "deploy:db": "sh ./deploy-arm.sh",
+    "deploy:db": "sh ./scripts/deploy.sh",
+    "remove:db": "sh ./scripts/teardown.sh",
     "run:create": "tsc && node dist/src/app/Create/create.js",
     "run:read": "tsc && node dist/src/app/Read/read.js",
     "run:update": "tsc && node dist/src/app/Update/update.js",
