Massive rework for DDD/Clean architecture and testing

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,13 @@
   "env": {
     "node": true,
     "es6": true
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.test.mjs", "**/*.test.js", "**/*.test.ts"],
+      "env": {
+        "jest": true
+      }
+    }
+  ]
 }
