--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "serverless-azure-cosmosdb-crud",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Mikael Vesavuori",
   "description": "Serverless CRUD on Cosmos DB (SQL) with Azure Functions, API Management and Typescript",
   "scripts": {
     "start": "sls offline",
     "build": "tsc",
     "watch": "tsc -w",
+    "test": "npm run build && npm run test:unit",
+    "test:unit": "jest __tests__ --collectCoverage --runInBand --detectOpenHandles --forceExit",
     "lint": "eslint '*/**/*.{js,ts}' --quiet --fix",
     "deploy": "sls deploy",
     "deploy:db": "sh ./scripts/deploy.sh",
@@ -23,18 +25,22 @@
   "devDependencies": {
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@babel/types": "^7.10.4",
-    "@types/node": "^14.0.22",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
+    "@babel/types": "^7.10.5",
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.26",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
+    "jest": "^26.1.0",
     "prettier": "^2.0.5",
     "serverless-azure-functions": "^2.0.13",
-    "serverless-webpack": "^5.3.2",
+    "serverless-webpack": "^5.3.3",
     "superagent": "^5.3.1",
-    "ts-loader": "^8.0.0",
-    "typescript": "^3.9.6",
-    "webpack": "^4.43.0",
+    "ts-jest": "^26.1.4",
+    "ts-loader": "^8.0.1",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
   }
 }
