--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "importHelpers": true,
     "removeComments": true,
     "strictFunctionTypes": true,
-    "strict": false
+    "strict": true
   }
 }
